--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -566,7 +566,7 @@
                                     <figure>
                                         <span class="profile-img  down-art"> <img src="~/Content/images/squad/donald-samy-down-art.png" alt=""> </span>
                                         <figcaption>
-                                            <h5 class="ellipsify">SOCIAL MEDIA MANAGER</h5>
+                                            <h5 class="ellipsify">BRAND PARTNER </h5>
                                             <h4 class="ellipsify"><span>Donald</span> Samy </h4>
                                         </figcaption>
                                     </figure>
@@ -711,7 +711,7 @@
                                     <figure>
                                         <span class="profile-img down-art "> <img src="~/Content/images/squad/mithul-rao.png" alt=""> </span>
                                         <figcaption>
-                                            <h5 class="ellipsify">SR. Programmer</h5>
+                                            <h5 class="ellipsify">SR. SOFTWARE PROGRAMMER</h5>
                                             <h4 class="ellipsify"><span>Mithul</span> Rao</h4>
                                         </figcaption>
                                     </figure>
@@ -1117,7 +1117,7 @@
                                     <a href="@Url.Action("MahindraMMF","work")">
                                         <img src="~/Content/work/images/thums/mmf-thum.jpg" alt="">
                                         <div class="caption">
-                                            <h4>>Mahindra Mutual Fund</h4>
+                                            <h4>Mahindra Mutual Fund</h4>
                                             <p>Conversational interface for enhanced experience</p>
                                         </div>
                                     </a>
@@ -1145,7 +1145,7 @@
                         <div class="resp-tab-content" id="Experiences">
                             <ul>
                                 <li>
-                                    <a href="@Url.Action("MahindraMMF","work")">
+                                    <a href="@Url.Action("MahindraMMFExperience","work")">
                                         <img src="~/Content/work/images/thums/mmf-thum.jpg" alt="">
                                         <div class="caption">
                                             <h4>Mahindra Mutual Fund</h4>
