--- a/Sparkt.WebApp/Views/Shared/_Layout.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_Layout.cshtml
@@ -235,10 +235,21 @@
                     <span class="word ">Brands</span>
                     <span class="word ">Data</span>
                     <span class="word ">Craft</span>
+                    <span class="word ">Business</span>
                     <span class="word ">Change</span>
                     <span class="word ">People</span>
                     <span class="word ">Culture</span>
                     <span class="word ">Conversations</span>
+                    <span class="word ">Storytelling</span>
+                    <span class="word ">Technology</span>
+                    <span class="word ">Dreams</span>
+                    <span class="word ">Challenges</span>
+                    <span class="word ">Emotions</span>
+                    <span class="word ">Music</span>
+                    <span class="word ">Fun</span>
+                    <span class="word ">Experiments</span>
+                    <span class="word ">Insights</span>
+                    <span class="word ">Innovation</span>
                 </p>
             </div>
 
