--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -3,7 +3,7 @@
     <div class="client-works">
         <ul id="mahindra" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("MahindraTah","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/tah-thum.jpg" alt="" /> <span>Kar Bachat Yojana</span> </a> </li>
-            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("MahindraMMF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-thum.jpg" alt="" /> <span>MMF Website</span> </a> </li>
+            <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("MahindraMMF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-thum.jpg" alt="" /> <span>MAHINDRA MUTUAL FUND</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("MahindraNfoLaunches","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-info-thum.jpg" alt="" /> <span>MMF NFO Launches</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("MahindraBadhatYojana","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/badhat-yojana-thum.jpg" alt="" /> <span>MMF BADHAT YOJANA</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("MahindraUnnati","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mahindra-unnati-thum.jpg" alt="" /> <span>UNNATI EMERGING BUSINESS YOJANA</span> </a> </li>
