--- a/Sparkt.WebApp/Views/work/Dhoni.cshtml
+++ b/Sparkt.WebApp/Views/work/Dhoni.cshtml
@@ -8,6 +8,19 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ms-dhoni-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": " M.S. Dhoni  Video",
+    "@@id": "https://youtu.be/XLMOOFbQfNw",
+    "url":"https://youtu.be/XLMOOFbQfNw",
+    "description": "Thumb-stopping digital campaign to build excitement for World Television Premiere.",
+    "duration": "T1M19S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/dhoni-cover.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
