--- a/Sparkt.WebApp/Views/work/EditageInsights.cshtml
+++ b/Sparkt.WebApp/Views/work/EditageInsights.cshtml
@@ -9,6 +9,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/editage-thum.jpg";
 }
 @section BodyClass {editage}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Editage Insigts Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/HBPHq9k-8cE",
+    "url":"https://youtu.be/HBPHq9k-8cE",
+    "description": "Packaged the content in an effective manner to alleviate the brand’s perception.",
+    "duration": "07S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/editage-video-1.png",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
