--- a/Sparkt.WebApp/Views/work/HSPubh.cshtml
+++ b/Sparkt.WebApp/Views/work/HSPubh.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/hsubh-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Har Shaakh Pe Ullu Baithaa Hai Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/OHJxytyWtn8",
+    "url":"https://youtu.be/OHJxytyWtn8",
+    "description": "A series of films with Journalist Khoji interviewing Chaitu Lal in the kitsch Indian Breaking News style",
+    "duration": "2M33S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/hsubh-cover.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
