--- a/Sparkt.WebApp/Views/work/Ikyawann.cshtml
+++ b/Sparkt.WebApp/Views/work/Ikyawann.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ikyawann-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Ikyawann Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/kxRe7kSkBUo",
+    "url":"https://youtu.be/kxRe7kSkBUo",
+    "description": "BUILDING #NOTSHAADIMATERIAL CONVERSATIONS WITH UGC VIDEOS ALONG WITH A SET OF EXCLUSIVE CONTENT LINKING THE COMMUNICATION TO THE CHARACTER",
+    "duration": "1M56S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/ikyawann-cover.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
