--- a/Sparkt.WebApp/Views/work/IshqBaaaz.cshtml
+++ b/Sparkt.WebApp/Views/work/IshqBaaaz.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ishqbaaaz-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Ishqbaaaz Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/7_B3nzXFQAA",
+    "url":"https://youtu.be/7_B3nzXFQAA",
+    "description": "Bringing alive the characters of the three brothers and their special bond with exclusive digital content",
+    "duration": "2M07S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/ishaqbaaaz-cover.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
