--- a/Sparkt.WebApp/Views/work/JungleBook.cshtml
+++ b/Sparkt.WebApp/Views/work/JungleBook.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/junglebook-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "The Jungle Book Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/r0YbzpJA1cM",
+    "url":"https://youtu.be/r0YbzpJA1cM",
+    "description": "Building anticipation for World Television Premiere through a distinctive digital experiential campaign",
+    "duration": "1M17S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/jungle-book-cover.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
