--- a/Sparkt.WebApp/Views/work/Khichdi.cshtml
+++ b/Sparkt.WebApp/Views/work/Khichdi.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/khichadi-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Khichdi Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/aXKoL1gwo7E",
+    "url":"https://youtu.be/aXKoL1gwo7E",
+    "description": "Digital exclusive content to introduce iconic characters",
+    "duration": "40S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/khichadi-cover.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
