--- a/Sparkt.WebApp/Views/work/Kullfi.cshtml
+++ b/Sparkt.WebApp/Views/work/Kullfi.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/kullfi-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Kulfi Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/1dL2ZhKZDZ8",
+    "url":"https://youtu.be/1dL2ZhKZDZ8",
+    "description": "SERIES OF MUSIC VIDEOS SHOWCASING KULLFI’S ABILITY TO SING ABOUT ANYTHING!",
+    "duration": "2M30S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/kulfi-cover.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
