--- a/Sparkt.WebApp/Views/work/MadeByMom.cshtml
+++ b/Sparkt.WebApp/Views/work/MadeByMom.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/mouthers-day-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Made By Mom Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/4QRBHpKRL44",
+    "url":"https://youtu.be/4QRBHpKRL44",
+    "description": "Igniting a Nayi Soch on Mother’s Day",
+    "duration": "2M24S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/mothers-day-cover.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
