--- a/Sparkt.WebApp/Views/work/MahindraBadhatYojana.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraBadhatYojana.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/badhat-yojana-thum.jpg";
 }
 @section BodyClass {mahindra}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "MMF BADHAT YOJANA Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/tvQ852vMBbs",
+    "url":"https://youtu.be/tvQ852vMBbs",
+    "description": "Exploring how richness is measured in Indian society",
+    "duration": "1M05S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/mahindra-badhat-yojana-cover.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
