--- a/Sparkt.WebApp/Views/work/MahindraMMF.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraMMF.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/mmf-thum.jpg";
 }
 @section BodyClass {mahindra}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Mahindra Mutual Fund Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/KhctUASVZj4",
+    "url":"https://youtu.be/KhctUASVZj4",
+    "description": "Conversational interface for enchanced experience",
+    "duration": "1M56S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/mahindra-mmf-cover.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
@@ -21,7 +37,7 @@
             </div>
             <div class="head-title floated">
                 <i class="title-icon"><img src="~/Content/work/images/title-icon.png" alt="" /></i>
-                <h1>MMF WEBSITE</h1>
+                <h1>MAHINDRA MUTUAL FUND</h1>
                 <div class="clear"></div>
                 <span>Conversational interface for enhanced experience</span>
             </div>          
@@ -32,7 +48,7 @@
                 <li class="tooltip" title="CAMPAIGN INDIA: Long Term Strategy - Silver"><img src="~/Content/work/images/awards/campaign-india-silver.png" class="responsive-img" alt="" /> </li>
                 <li class="tooltip" title="MADDIES: Best Mobile Website - Gold"><img src="~/Content/work/images/awards/maddies-gold.png" class="responsive-img" alt="" /> </li>
 
-                <li class="tooltip" title="ACEF: Mobile - Successful Use of Technology - Silver"><img src="images/awards/acef-silver.png" class="responsive-img" alt="" /> </li>
+                <li class="tooltip" title="ACEF: Mobile - Successful Use of Technology - Silver"><img src="~/Content/work/images/awards/acef-silver.png" class="responsive-img" alt="" /> </li>
                 <li class="tooltip" title="ACEF: Mobile - Innovation - Gold"><img src="~/Content/work/images/awards/acef-gold.png" class="responsive-img" alt="" /> </li>
             </ul>
         </div>
