--- a/Sparkt.WebApp/Views/work/MahindraTah.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraTah.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/tah-thum.jpg";
 }
 @section BodyClass {mahindra}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Kar Bachat Yojana Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/6je1hqd0-qs",
+    "url":"https://youtu.be/6je1hqd0-qs",
+    "description": "Igniting a national debate on Taxes Acche Hain ahead of Budget 2017",
+    "duration": "1M57S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/mahindra-tah-cover.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
