--- a/Sparkt.WebApp/Views/work/MahindraUnnati.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraUnnati.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/mahindra-unnati-thum.jpg";
 }
 @section BodyClass {mahindra}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Mahindra - Unnati Emerging Business Yojana Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/HL8D6dpwxBo",
+    "url":"https://youtu.be/HL8D6dpwxBo",
+    "description": "Samay se Aagey",
+    "duration": "2M09S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/mahindra-unnati-cover.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
