--- a/Sparkt.WebApp/Views/work/NachBaliye8.cshtml
+++ b/Sparkt.WebApp/Views/work/NachBaliye8.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/nach-baliye-8-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Nach Baliye 8",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/y4sgMwqZQRs",
+    "url":"https://youtu.be/y4sgMwqZQRs",
+    "description": "Bringing alive the Romance-wala Dance",
+    "duration": "2M00S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/nach-baliye-8-cover.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
