--- a/Sparkt.WebApp/Views/work/NayiSoch.cshtml
+++ b/Sparkt.WebApp/Views/work/NayiSoch.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/nayosoch-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Nayi Soch",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/WlLUKHjWYtc",
+    "url":"https://youtu.be/WlLUKHjWYtc",
+    "description": "Wear your Mothers name with pride",
+    "duration": "3M05S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/nayosoch-cover.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
