--- a/Sparkt.WebApp/Views/work/OnePlus.cshtml
+++ b/Sparkt.WebApp/Views/work/OnePlus.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/oneplus-thum.jpg";
 }
 @section BodyClass {one -plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "OnePlus Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/ECodh83YZc0",
+    "url":"https://youtu.be/ECodh83YZc0",
+    "description": "The power of 5 in customer care",
+    "duration": "1M47S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/oneplus-cover.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
