--- a/Sparkt.WebApp/Views/work/Pow.cshtml
+++ b/Sparkt.WebApp/Views/work/Pow.cshtml
@@ -8,6 +8,19 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/pow-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "POW - Bandi Yuddh Ke Video",
+    "@@id": "https://youtu.be/Wq3rDzMC730",
+    "url":"https://youtu.be/Wq3rDzMC730",
+    "description": "A first-of-a-kind banner that created true 'shock' value",
+    "duration": "T1M45S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/pow-cover.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
