--- a/Sparkt.WebApp/Views/work/TextMoji.cshtml
+++ b/Sparkt.WebApp/Views/work/TextMoji.cshtml
@@ -8,7 +8,19 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/textmoji-thum.jpg";
 }
 @section BodyClass {mahindra}
-
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Text Moji Video",
+    "@@id": "https://youtu.be/qdlm51eGDxE",
+    "url":"https://youtu.be/qdlm51eGDxE",
+    "description": "ELEVATING MAHINDRA MUTUAL FUND'S BRAND COMMUNICATION EXPERIENCE IN THE SMS INBOX!",
+    "duration": "T24S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/mahindra-textmoji.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
