--- a/Sparkt.WebApp/Views/work/Tgilc.cshtml
+++ b/Sparkt.WebApp/Views/work/Tgilc.cshtml
@@ -8,6 +8,19 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/tgilc-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "The Great Indian Laughter Challenge Video",
+    "@@id": "https://youtu.be/c8ZmBI9RkEA",
+    "url":"https://youtu.be/c8ZmBI9RkEA",
+    "description": "Getting the nation to join in on a laughter riot with thumbstopping content",
+    "duration": "T39S",
+    "thumbnailUrl":"https://img.youtube.com/vi/c8ZmBI9RkEA/maxresdefault.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
