--- a/Sparkt.WebApp/Views/work/Total.cshtml
+++ b/Sparkt.WebApp/Views/work/Total.cshtml
@@ -8,7 +8,19 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/total-thum.jpg";
 
 }
-   
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "Total Video",
+    "@@id": "https://youtu.be/NH3LUacvaCE",
+    "url":"https://youtu.be/NH3LUacvaCE",
+    "description": "Creating a truly holistic road safety solution to communicate a seamless brand story through product innovation",
+    "duration": "T3M35S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/total-banner.gif",
+    "uploadDate":"05/01/2018"
+    }
+</script>   
 <main>
     <div class="section">
         <div class="work-banner">
@@ -28,6 +40,7 @@
                 <h1>Total</h1>
                 <div class="clear"></div>
                 <span>Creating a truly holistic road safety solution to communicate a seamless brand story through product innovation</span>
+                <a class="showcase-tab">Showcase</a>
             </div>
         </div>
         @Html.Partial("_WorkMenu")
