--- a/Sparkt.WebApp/Views/work/UCypher.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypher.cshtml
@@ -8,6 +8,19 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
 }
 @section BodyClass {usports}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "UCypher Video",
+    "@@id": "https://youtu.be/-8NJ2FePRkU",
+    "url":"https://youtu.be/-8NJ2FePRkU",
+    "description": "Naya Sport. Naye Superstars.",
+    "duration": "T3M00S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/ucypher-cover.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
@@ -28,16 +41,16 @@
                 <h1>UCypher</h1>
                 <div class="clear"></div>
                 <span>Naya Sport. Naye Superstars.</span>
-            </div>           
+            </div>
         </div>
-      
+
         <div class="awards-wrap">
             <ul>
                 <li class="tooltip" title="ABBYS: 18.B Youth Marketing - Silver"><img src="~/Content/work/images/awards/abbys-silver.png" class="responsive-img" alt="" /> </li>
             </ul>
         </div>
         @Html.Partial("_WorkMenu")
-       
+
     </div>
     <div class="section">
         <div class="head-title floated ">
@@ -63,12 +76,10 @@
                                     <div class="assets-title">
                                         <h4>Hum Gamer Hain - an anthem for the gamers introducing them <br>to the thrilling world of UCypher </h4>
                                     </div>
-
                                 </div>
                             </div>
                         </a>
                     </div>
-
 
                     <div class="video-carousel">
                         <div class="creative-assets  ">
@@ -76,7 +87,6 @@
                                 <div class="assets-title">
                                     <h4>Exclusive digital extensions of the television promos <br>to break the stereotypes of "Indian gamers" </h4>
                                 </div>
-
 
                                 <div class="video-slider">
                                     <div class="video-item">
@@ -90,7 +100,6 @@
                                         </video>
                                     </div>
 
-
                                     <div class="video-item">
                                         <video poster="https://img.youtube.com/vi/qoGOXK9Dsf8/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/qoGOXK9Dsf8" type="video/youtube" />
@@ -101,34 +110,25 @@
                                             <source src="https://youtu.be/GjwNSOFupFA" type="video/youtube" />
                                         </video>
                                     </div>
-
                                 </div>
 
-
                             </div>
-
                         </div>
-
 
                         <div class="video-nav">
                             <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/YfuCIgh_DQk/maxresdefault.jpg" alt="" /><span class="caption">Digital Exclusive Promo CSGO</span></a> </div>
                             <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/hNrOotKWqUA/maxresdefault.jpg" alt="" /><span class="caption">Digital Exclusive Promo DOTA</span></a> </div>
 
-
                             <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/qoGOXK9Dsf8/maxresdefault.jpg" alt="" /><span class="caption">TEKKEN 7 | The New Battleground</span></a> </div>
                             <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/GjwNSOFupFA/maxresdefault.jpg" alt="" /><span class="caption">DOTA 2 | The New Battleground</span></a> </div>
-
                         </div>
-
                     </div>
-
                     <div class="video-carousel">
                         <div class="creative-assets ">
                             <div class="container">
                                 <div class="assets-title">
                                     <h4>Introducing the 6 teams and their captains <br>debuting on UCypher with digital exclusive films </h4>
                                 </div>
-
 
                                 <div class="video-slider">
                                     <div class="video-item">
@@ -151,7 +151,6 @@
                                             <source src="https://youtu.be/NhjqfFL7uWA" type="video/youtube" />
                                         </video>
                                     </div>
-
                                     <div class="video-item">
                                         <video poster="https://img.youtube.com/vi/v5KLru8pVEo/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/v5KLru8pVEo" type="video/youtube" />
@@ -162,14 +161,10 @@
                                             <source src="https://youtu.be/TT-1xTk4Z4E" type="video/youtube" />
                                         </video>
                                     </div>
-
                                 </div>
 
-
                             </div>
-
                         </div>
-
 
                         <div class="video-nav">
                             <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/XshSDUkyu5g/maxresdefault.jpg" alt="" /><span class="caption">Ankit | Captain - Marksmen </span></a> </div>
@@ -178,18 +173,14 @@
                             <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/NhjqfFL7uWA/maxresdefault.jpg" alt="" /><span class="caption">Pranay | Captain - Yodhas</span></a> </div>
                             <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/v5KLru8pVEo/maxresdefault.jpg" alt="" /><span class="caption">Ritesh | Captain - Sherdils</span></a> </div>
                             <div class="nav-item"><a href="#" class="hvr-trim"><img src="images/u-cypher-akshay-akramaks.jpg" alt="" /><span class="caption">Akshay | Captain - Akramaks</span></a> </div>
-
                         </div>
-
                     </div>
-
                     <div class="video-carousel">
                         <div class="creative-assets ">
                             <div class="container">
                                 <div class="assets-title">
                                     <h4>The world of UCypher unravelled on social media with <br>live and innovative formats, influencer content and digital exclusives </h4>
                                 </div>
-
 
                                 <div class="video-slider">
                                     <div class="video-item">
@@ -203,8 +194,6 @@
                                         </video>
                                     </div>
 
-
-
                                     <div class="video-item">
                                         <video poster="https://img.youtube.com/vi/5ghMbNzQNjY/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/5ghMbNzQNjY" type="video/youtube" />
@@ -216,56 +205,40 @@
                                         </video>
                                     </div>
 
-
                                     <div class="video-item">
                                         <video poster="https://img.youtube.com/vi/1LvaufoRJQg/maxresdefault.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
                                             <source src="https://youtu.be/1LvaufoRJQg" type="video/youtube" />
                                         </video>
                                     </div>
 
-
-
                                 </div>
 
-
                             </div>
-
                         </div>
-
-
 
                         <div class="video-nav">
                             <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/Iip0Ux2Tty4/maxresdefault.jpg" alt="" /><span class="caption">What is #UCYPHER?</span></a> </div>
                             <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/BAERor1SZyE/maxresdefault.jpg" alt="" /><span class="caption">Hoezaay Indian Counter Strike Players Be Like</span></a> </div>
-
                             <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/5ghMbNzQNjY/maxresdefault.jpg" alt="" /><span class="caption">Triple Kill</span></a> </div>
                             <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/HEIvySNZB_U/maxresdefault.jpg" alt="" /><span class="caption">Perfect Gameplay</span></a> </div>
                             <div class="nav-item"><a href="#" class="hvr-trim"><img src="https://img.youtube.com/vi/1LvaufoRJQg/maxresdefault.jpg" alt="" /><span class="caption">KO</span></a> </div>
-
                         </div>
-
                     </div>
-
                     <div>
                         <div class="creative-assets center">
                             <div class="container">
                                 <div class="assets-title">
                                     <h3>Crafting season greetings with a hardcore gaming context delivered through innovative storytelling</h3>
                                 </div>
-
                                 <div class="mobile-style-carousel cypher-carousel">
                                     <div class="mobile-wrapp">
                                         <img src="images/mobile-slider.png" alt="" class="mobile-vector" />
-
                                         <div class="vector1 filter"> <img src="~/Content/work/images/ucypher-vector1.png" alt="" /> </div>
                                         <div class="vector1a filter"> <img src="~/Content/work/images/ucypher-vector1a.png" alt="" /> </div>
                                         <div class="vector1b filter"> <img src="~/Content/work/images/ucypher-vector1b.png" alt="" /> </div>
                                         <div class="vector2 filter2"> <img src="~/Content/work/images/ucypher-vector2.png" alt="" /> </div>
                                         <div class="vector2a filter2"> <img src="~/Content/work/images/ucypher-vector2a.png" alt="" /> </div>
-
                                         <div class="video-slider">
-
-
 
                                             <div class="video-item">
                                                 <video poster="~/Content/work/images/ucypher-christmas.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
@@ -290,11 +263,9 @@
                                         <div class="nav-item"><a href="#" class="hvr-grow-shadow "><img src="~/Content/work/images/ucypher-new-year.jpg" alt="" /></a></div>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     </div>
-
                     <div>
                         <div class="creative-assets center ">
                             <div class="container">
@@ -310,7 +281,6 @@
                                                 </video>
                                             </div>
                                         </div>
-
                                     </div>
                                     <ul class="devising-twitt">
                                         <li class="fadeLeft undefined t-animated t-default" data-t-show="2" style="opacity: 1;"><img src="~/Content/work/images/u-cypher-twitt-5.jpg" alt=""></li>
@@ -320,14 +290,11 @@
                                         <li class="fadeDown undefined t-animated t-default" data-t-show="6" style="opacity: 1;"><img src="~/Content/work/images/u-cypher-twitt-1.jpg" alt=""></li>
                                     </ul>
 
-
                                 </div>
-
 
                             </div>
                         </div>
                     </div>
-
                     <div>
                         <div class="creative-assets brown-bg ">
                             <div class="container">
@@ -349,7 +316,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
