--- a/Sparkt.WebApp/Views/work/UCypherUseOfDataMS.cshtml
+++ b/Sparkt.WebApp/Views/work/UCypherUseOfDataMS.cshtml
@@ -8,6 +8,19 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ucypher-thum.jpg";
 }
 @section BodyClass {usports}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": " UCypher - Use Of Data Marketing Sciences Video",
+    "@@id": "https://youtu.be/oI9wi82JaLs",
+    "url":"https://youtu.be/oI9wi82JaLs",
+    "description": "Use Of Data Marketing Sciences",
+    "duration": "T3M",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/ucypher-cover.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
