--- a/Sparkt.WebApp/Views/work/WomensDay.cshtml
+++ b/Sparkt.WebApp/Views/work/WomensDay.cshtml
@@ -8,6 +8,19 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/womens-day-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": " Women’s Day Video",
+    "@@id": "https://youtu.be/OcuXIpH4REw"",
+    "url":"https://youtu.be/OcuXIpH4REw"",
+    "description": "Igniting a Nayi Soch to break gender stereotypes",
+    "duration": "T2M48S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/womens-day-cover.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
