--- a/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
+++ b/Sparkt.WebApp/Views/work/MahindraTextMoji.cshtml
@@ -8,6 +8,22 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/textmoji-thum.jpg";
 }
 @section BodyClass {mahindra}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "MMF Textmoji Video",
+    "VideoList": [{
+    "@@type":
+    "@@id": "https://youtu.be/KhctUASVZj4",
+    "url":"https://youtu.be/KhctUASVZj4",
+    "description": "ELEVATING MAHINDRA MUTUAL FUND'S BRAND COMMUNICATION EXPERIENCE IN THE SMS INBOX!",
+    "duration": "2M",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/mahindra-textmoji.jpg",
+    "uploadDate":"05/01/2018",
+    }]
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
