--- a/Sparkt.WebApp/Views/work/TedGoogleCards.cshtml
+++ b/Sparkt.WebApp/Views/work/TedGoogleCards.cshtml
@@ -8,6 +8,19 @@
     ViewBag.MetaImage = "https://sparkt.in/Content/work/images/thums/ted-thum.jpg";
 }
 @section BodyClass {star-plus}
+<script type="application/ld+json">
+    {
+    "@@context": "https://schema.org",
+    "@@type": "VideoObject",
+    "name": "TED TALKS Google Cards Video",
+    "@@id": "https://youtu.be/O7XbbSbK5p0",
+    "url":"https://youtu.be/O7XbbSbK5p0",
+    "description": "INNOVATING ON GOOGLE SEARCH TO ELEVATE THE DISCOVERY OF TED TALKS INDIA NAYI SOCH",
+    "duration": "T1M51S",
+    "thumbnailUrl":"https://www.sparkt.in/Content/work/images/banners/ted-cover.jpg",
+    "uploadDate":"05/01/2018"
+    }
+</script>
 <main>
     <div class="section">
         <div class="work-banner">
